--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "react": "16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "source-map-loader": "^0.2.4"
   },
   "devDependencies": {
